<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_market_list"
            android:icon="@drawable/ic_action_list"
            android:title="Market List" />
        <!--
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_action_calendar_day"
            android:title="Market Calendar" />
            -->
        <item
            android:id="@+id/nav_grocery_list"
            android:icon="@drawable/ic_action_document"
            android:title="Grocery List" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_map"
            android:title="Map" />
        </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings" />
        <item
            android:id="@+id/nav_use_as_vendor"
            android:icon="@drawable/ic_perm_identity"
            android:title="Use as Vendor" />
    </group>

</menu>
