...

    <!-- Used to change action bar title when switching between fragments -->
    <string name="title_fragment_maps">Map</string>
    <string name="title_fragment_market_list">Market List</string>
    <string name="title_fragment_calendar">Market Calendar</string>
    <string name="title_fragment_market_description">Market Description</string>
    <string name="title_fragment_grocery_list">Your Grocery List</string>
    <string name="title_fragment_in_season">Produce In Season</string>
    <string name="title_fragment_vendors_search_results_list">Search Results</string>
    <string name="title_fragment_settings">Settings</string>

    <!--For the enable permission/turn on location card on content main-->
    <string name="rationale_enable_permissions">We use your location data to customize your experience. Please allow location permissions in App Settings for additional functionality.</string>
...
